package NYT.NCypressClient.NProto;

import "yt/ytlib/misc/guid.proto";
import "yt/ytlib/ytree/attributes.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqLock
{
    required int32 mode = 1;
}

message TRspLock
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqCreate
{
    required int32 type = 1;
    optional NYT.NYTree.NProto.TAttributes node_attributes = 2;

    extensions 100 to max;
}

message TRspCreate
{
    required NYT.NProto.TGuid node_id = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqCopy
{
    required string source_path = 1;
}

message TRspCopy
{
    required NYT.NProto.TGuid object_id = 1;
}

////////////////////////////////////////////////////////////////////////////////
