package NYT.NTableClient.NProto;

////////////////////////////////////////////////////////////////////////////////

message TChunkServerMeta
{
    required int64 RowCount = 1;
}

////////////////////////////////////////////////////////////////////////////////
